Chore: Fix double spacing in Page template
In the Page-content, which has inner bottom spacing due to the spacing
from Paper, the last element's margin could accumulate with the bottom
padding, producing double-space.

As such, make the last element inside the content not have any extrinsic
spacing (margin) that could add to the inner spacing in the Page.

--- a/src/common/components/page/page.css
+++ b/src/common/components/page/page.css
@@ -18,3 +18,10 @@
 }
 
 .Page-content {}
+
+.Page-content>:last-child {
+  /* Remove extrinsic bottom spacing (margin) from the last element in the
+  content, given that it will accumulate with padding in the Paper sheet and
+  present double spacing at the bottom of the container */
+  margin-bottom: 0;
+}
